--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dribble-pj",
+  "name": "weather-pj",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.6",
     "chartkick": "^5.0.1",
     "material-design-icons": "^3.0.1",
+    "pinia": "^3.0.3",
     "postcss": "^8",
     "swiper": "^11.1.14",
     "tailwindcss": "^3",
